# FSPred

./: NOTES.md  README.md  fspred.cabal
src/FSPred/: ParameterizedPredicate.hs  Predicate.hs
