cabal-version:      2.4
name:               fspred
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Takumi Crary
maintainer:         tcrary@gmail.com

-- A copyright notice.
license:            BSD-2-Clause
license-file:       LICENSE
-- copyright:
-- category:

library
    hs-source-dirs:   src
    build-depends:    base ^>=4.13.0.0,
                      filepath >= 1.4.2.1
    default-language: Haskell2010
    ghc-options: -Wall

    Exposed-modules:
        FSPred.Predicate
